tests/cases/compiler/genericArrayPropertyAssignment.ts
function isEmpty(list: {length:number;})
{
return list.length ===0;
}
 
isEmpty([]); // error
 
